# consent-api

./: .dockerignore  .env.template  .envrc.template  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .rtx.toml  Dockerfile  Gemfile  Makefile  Procfile  Pulumi.yaml  README.md  activity-diagram.plantuml  consent.db  consent_api.py  dependabot.yml  docker-compose.yaml  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements-development.txt  requirements-production.txt  requirements.txt  setup.cfg  webpack.config.js
.github/workflows/: branch-ci.yaml  branch-deploy.yaml  build-and-deploy.yaml  ci.yml  deploy.yaml  main-ci.yaml  main-deploy.yaml  merge-pr.yaml  open-pull-request.yaml  production-deploy.yaml
client/: .babelrc.json  .eslintrc.js  CHANGELOG.md  README.md  jest.config.cjs  jest.config.js  package-lock.json  package.json  rollup.config.mjs  tsconfig.es5.json  tsconfig.json
client/example/: cookie-banner.js  cookies-page.js  utils.js
client/examples/: cookie-banner.js  cookies-page.js
client/scripts/: publish-package.sh
client/src/: .babelrc.json  ApiV1.ts  GovConsentConfig.ts  GovSingleConsent.ts  consent.js  cookie-banner.js  cookies-page.js  global.d.ts  index.ts  singleconsent.js  (+4 more)
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml
consent_api/: __init__.py  config.py  database.py  db.py  forms.py  jinja.py  models.py  util.py  views.py
db/: schema.rb
e2e-tests/: .Dockerfile  .dockerignore  .jammy-test  package-lock.json  package.json  playwright.config.ts
express-app/: apiMock.js  package-lock.json
infra/: __main__.py  deploy.py  deploy_service.py  setup_env.py  types_.py  utils.py
migrations/: alembic.ini  env.py
scripts/: generate_openapi.py
static/: main.css
templates/: consent.js  index.html
testing-app/: .Dockerfile  Readme.md  apiMock.js  db.js  main.js  nodemon.json  package.json
(+89 files in other folders)
